<?xml version="1.0"?>
<package>
  <name>omni_im_demo</name>
  <version>0.0.0</version>
  <description>The omni_im_demo package</description>
  <maintainer email="dane@danepowell.com">Dane Powell</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>omni_im</build_depend>
  <run_depend>omni_im</run_depend>
</package>
